--- a/src/client/components/ssm/toast/toast.html
+++ b/src/client/components/ssm/toast/toast.html
@@ -1,5 +1,5 @@
 <template>
-    <div class="slds-notify_container slds-is-relative slds-hide" data-js-toast>
+    <div class="slds-notify_container slds-hide" data-js-toast>
         <div class={containerClass} role="status">
             <span class="slds-assistive-text">{type}</span>
             <span
