--- a/src/client/components/ssm/welcomemodal/welcomemodal.html
+++ b/src/client/components/ssm/welcomemodal/welcomemodal.html
@@ -35,17 +35,44 @@
                                     class="slds-welcome-mat__info-title"
                                     id="welcome-modal-header"
                                 >
-                                    The SFCC On-Demand Sandboxes Manager is
-                                    here!
+                                    The Salesforce On-Demand Sandboxes Manager
+                                    is here!
                                 </h2>
                                 <div
                                     class="slds-welcome-mat__info-description slds-text-longform"
                                 >
                                     <p>
-                                        Welcome to SFCC On-Demand Sandboxes
-                                        Manager. This interface allows you to
-                                        manage the On-Demand Sandboxes within
-                                        the realms you have access to.
+                                        <strong>Welcome</strong> to the
+                                        Salesforce On-Demand Sandboxes Manager.
+                                        This interface allows you to manage the
+                                        On-Demand Sandboxes within the realms
+                                        you have access to.
+                                    </p>
+                                    <p>
+                                        In order to use this tool, please create
+                                        a new API Client from the
+                                        <a
+                                            href="https://account.demandware.com/"
+                                            target="_blank"
+                                            >Account Manager portal</a
+                                        >.
+                                    </p>
+                                    <p>
+                                        Please ensure to put the following in
+                                        the configuration:
+                                    </p>
+                                    <p class="slds-text-align_left">
+                                        Redirect URI:
+                                        <em
+                                            >https://sfcc-sandboxes-manager.herokuapp.com/auth/login_reentry</em
+                                        >
+                                    </p>
+                                    <p class="slds-text-align_left">
+                                        Token Endpoint Auth Method:
+                                        <em>client_secret_post</em>
+                                    </p>
+                                    <p class="slds-text-align_left">
+                                        Access Token Format: <em>UUID</em>
                                     </p>
                                 </div>
                                 <div class="slds-welcome-mat__info-actions">
@@ -82,6 +109,17 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <p class="slds-m-top_large">
+                                            <em
+                                                >Please note that this tool is
+                                                <strong
+                                                    >not an official Salesforce
+                                                    product</strong
+                                                >. It is developed and
+                                                maintained by the community, for
+                                                the community.</em
+                                            >
+                                        </p>
                                     </div>
                                 </div>
                             </div>
