--- a/src/client/components/ssm/header/header.html
+++ b/src/client/components/ssm/header/header.html
@@ -78,7 +78,7 @@
                             >
                                 <img
                                     alt="Person name"
-                                    src="/resources/slds/images/avatar2.jpg"
+                                    src="/resources/slds/images/profile_avatar_200.png"
                                     title="User avatar"
                                 />
                             </span>
