Handle host and port from Heroku

--- a/src/client/components/ssm/welcomemodal/welcomemodal.html
+++ b/src/client/components/ssm/welcomemodal/welcomemodal.html
@@ -62,17 +62,16 @@
                                         the configuration:
                                     </p>
                                     <p class="slds-text-align_left">
-                                        Redirect URI:
-                                        <em
-                                            >https://sfcc-sandboxes-manager.herokuapp.com/auth/login_reentry</em
+                                        Redirect URI:&nbsp;<em
+                                            >{redirectURI}</em
                                         >
                                     </p>
                                     <p class="slds-text-align_left">
-                                        Token Endpoint Auth Method:
+                                        Token Endpoint Auth Method:&nbsp;
                                         <em>client_secret_post</em>
                                     </p>
                                     <p class="slds-text-align_left">
-                                        Access Token Format: <em>UUID</em>
+                                        Access Token Format:&nbsp;<em>UUID</em>
                                     </p>
                                 </div>
                                 <div class="slds-welcome-mat__info-actions">
