--- a/src/client/components/ssm/welcomemodal/welcomemodal.html
+++ b/src/client/components/ssm/welcomemodal/welcomemodal.html
@@ -111,8 +111,8 @@
                                         <p class="slds-m-top_large">
                                             <em
                                                 >Please note that this tool is
-                                                <strong
-                                                    >not an official Salesforce
+                                                <strong>
+                                                    not an official Salesforce
                                                     product</strong
                                                 >. It is developed and
                                                 maintained by the community, for
