Fix missing spaces

--- a/src/client/components/ssm/welcomemodal/welcomemodal.html
+++ b/src/client/components/ssm/welcomemodal/welcomemodal.html
@@ -50,7 +50,7 @@
                                     </p>
                                     <p>
                                         In order to use this tool, please create
-                                        a new API Client from the
+                                        a new API Client from the&nbsp;
                                         <a
                                             href="https://account.demandware.com/"
                                             target="_blank"
@@ -110,7 +110,8 @@
                                         </div>
                                         <p class="slds-m-top_large">
                                             <em
-                                                >Please note that this tool is
+                                                >Please note that this tool
+                                                is&nbsp;
                                                 <strong>
                                                     not an official Salesforce
                                                     product</strong
