--- a/src/client/components/ssm/sandboxes/sandboxes.html
+++ b/src/client/components/ssm/sandboxes/sandboxes.html
@@ -1,9 +1,9 @@
 <template>
     <div class="slds-grid slds-m-bottom_medium">
         <div class="slds-col">
-            <span class="slds-text-heading_small"
-                >Sandboxes (<span data-js-sandboxes-count>0</span>)</span
-            >
+            <span class="slds-text-heading_small">
+                Sandboxes (<span>{sandboxesCount}</span>)
+            </span>
         </div>
         <div class="slds-col">
             <div class="slds-grid slds-grid_align-end slds-gutters">
@@ -24,30 +24,6 @@
                                 />
                                 <span
                                     id="sandboxes-filter-onlymine-describe"
-                                    class="slds-checkbox_faux_container"
-                                    aria-live="assertive"
-                                >
-                                    <span class="slds-checkbox_faux"></span>
-                                </span>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="slds-col">
-                        <div class="slds-form-element">
-                            <label class="slds-checkbox_toggle slds-grid">
-                                <span
-                                    class="slds-form-element__label slds-m-bottom_none"
-                                    >Include deleted sandboxes</span
-                                >
-                                <input
-                                    type="checkbox"
-                                    id="sandboxes-filter-include-deleted"
-                                    aria-describedby="sandboxes-filter-include-deleted-describe"
-                                    onchange={handleFilterIncludeDeletedChange}
-                                    data-js-sandbox-filter-include-deleted
-                                />
-                                <span
-                                    id="sandboxes-filter-include-deleted-describe"
                                     class="slds-checkbox_faux_container"
                                     aria-live="assertive"
                                 >
@@ -159,6 +135,30 @@
                             </template>
                         </tbody>
                     </table>
+
+                    <template if:true={moreSandboxesToShow}>
+                        <div
+                            class="slds-grid slds-grid_align-end slds-gutters slds-m-top_medium"
+                        >
+                            <div class="slds-col">
+                                <button
+                                    class="slds-button slds-button_brand"
+                                    onclick={handleLoadMoreSandboxes}
+                                >
+                                    <svg
+                                        class="slds-button__icon slds-button__icon_left"
+                                        aria-hidden="true"
+                                    >
+                                        <use
+                                            xlink:href="/resources/slds/icons/utility-sprite/svg/symbols.svg#level_up"
+                                        ></use>
+                                    </svg>
+                                    Load more sandboxes ({remainingSandboxes}
+                                    more)
+                                </button>
+                            </div>
+                        </div>
+                    </template>
 
                     <!-- Sandbox details panels -->
                     <template for:each={sandboxes} for:item="sandbox">
