Change input type of client secret

--- a/src/client/components/ssm/authmodal/authmodal.html
+++ b/src/client/components/ssm/authmodal/authmodal.html
@@ -71,7 +71,7 @@
                     </label>
                     <div class="slds-form-element__control">
                         <input
-                            type="text"
+                            type="password"
                             id="auth-client-secret"
                             placeholder="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
                             required="required"
